--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Django==1.10.2
 django-el-pagination==3.0.1
 emoji==0.3.9
 -e git+https://github.com/gaqzi/django-emoji.git#egg=django-emoji
+django_slack
 Pygments==2.1.3
 django-watson
