--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-# plugin=python
-# plugin=http
-http=0.0.0.0:8585
+plugin=python
+plugin=http
+http=0.0.0.0:80
 stats=127.0.0.1:9191
 stats-http = true
 die-on-term=true
